# photo_editor

./: .env.example  celery.Dockerfile  docker-compose.yml  filter_build.py  main.py  pyproject.toml  worker-entrypoint.sh
core/: celery_app.py  celery_config.py  config.py  tasks.py
editors/: base_editor.py  effect.py  resize.py  water_mark.py
